# api/static/swagger.json
@@ -105,12 +105,16 @@
           },
           "code": {
             "type": "string"
+          },
+          "funcName": {
+            "type": "string"
           }
         },
         "required": [
           "appointmentId",
           "language",
-          "code"
+          "code",
+          "funcName"
         ]
       },
       "ExecuteResponse": {
